<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight ="20dp"
        android:layout_marginLeft ="20dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/enter_word"
        android:inputType="text" />

    <TextView
        android:id="@+id/pitchLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/pitch"
        app:layout_constraintTop_toBottomOf="@+id/pitchBar" />

    <SeekBar
        android:id="@+id/pitchBar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:progress="50"
        app:layout_constraintTop_toBottomOf="@+id/speedLabel" />

    <TextView
        android:id="@+id/speedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/pitchSpeed"
        app:layout_constraintTop_toBottomOf="@+id/speedBar" />

    <SeekBar
        android:id="@+id/speedBar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:progress="50"
        app:layout_constraintTop_toBottomOf="@+id/speakButton" />

    <Button
        android:id="@+id/speakButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/speak" />

    <SurfaceView
        android:id="@+id/Surface"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/detectionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal"
        android:text="@string/nothing_detected"/>

</LinearLayout>