<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/textRecognizerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_recognizer"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/overlayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_overlay"
            android:layout_margin="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/corousalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/corousal"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/anchorHostButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anchor_host"
            android:layout_margin="10dp"/>

    </LinearLayout>

    <fragment
        android:id="@+id/fragment"
        android:name="com.google.ar.sceneform.ux.ArFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="16dp" />


</LinearLayout>